# cv_video

./: CMakeLists.txt  README.md  package.xml
include/cv_video/: camera.h  cv_video.h  environment.h  recorder.h  settings.h  video.h  video_writer.h
src/: camera.cpp  camera_server.cpp  cv_video.cpp  environment.cpp  frame.cpp  publisher.cpp  recorder.cpp  replayer.cpp  service.cpp  settings.cpp  subscriber.cpp  video.cpp  video_writer.cpp
srv/: Record.srv
