<?xml version="1.0"?>
<package>
    <name>cv_video</name>
    <version>2015.1.0</version>
    <description>Video-related facilities based on OpenCV</description>
    <maintainer email="xperroni@gmail.com">Helio Perroni Filho</maintainer>
    <license>GPLv3</license>
    
    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/cv_video</url> -->
    
    <author >Helio Perroni Filho</author>
    
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>message_runtime</run_depend>
    
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- You can specify that this package is a metapackage here: -->
        <!-- <metapackage/> -->
        
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>